--- a/vue-ts-default/package.json
+++ b/vue-ts-default/package.json
@@ -40,6 +40,8 @@
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^3.21.0",
     "typescript": "^4.7.3",
+    "unplugin-auto-import": "^0.9.3",
+    "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.9",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
