--- a/vue-ts-default/package.json
+++ b/vue-ts-default/package.json
@@ -16,6 +16,7 @@
     "fastclick": "^1.0.6",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.16",
+    "register-service-worker": "^1.7.2",
     "vconsole": "^3.14.6",
     "vue": "^3.2.29",
     "vue-router": "^4.1.2"
