--- a/vue-ts-default/.env
+++ b/vue-ts-default/.env
@@ -2,8 +2,8 @@ VITE_APP_TITLE='vue-ts-template'
 
 # 备份路径
 BACKUP_PATH='/home/admin/youcai_backup'
-DEPLOY_PATH='/home/admin/youcai_web/h5/loveshow/LoveshowTest/2022/init_test'
+DEPLOY_PATH='/home/admin/youcai_web/h5/loveshow/LoveshowTest/2022/${VITE_APP_TITLE}'
 
 SERVER='admin@116.62.61.28'
  
-URL='http://nh5-ali.xiaoai.live/wx/loveshow/LoveshowTest/2022/init_test/'
+URL='http://nh5-ali.xiaoai.live/wx/loveshow/LoveshowTest/2022/${VITE_APP_TITLE}/'
