--- a/vue-ts-default/.env.production
+++ b/vue-ts-default/.env.production
@@ -1,4 +1,6 @@
-# 部署路径
-DEPLOY_PATH='/home/admin/youcai_web/h5/loveshow/2022/init_test/'
+VITE_APP_TITLE='vue-ts-template'
 
-URL='http://nh5-ali.xiaoai.live/wx/loveshow/2022/init_test/'
+# 部署路径
+DEPLOY_PATH='/home/admin/youcai_web/h5/loveshow/2022/${VITE_APP_TITLE}/'
+
+URL='http://nh5-ali.xiaoai.live/wx/loveshow/2022/${VITE_APP_TITLE}/'
