--- a/vue-ts-default/.vscode/settings.json
+++ b/vue-ts-default/.vscode/settings.json
@@ -2,5 +2,7 @@
   "typescript.tsdk": "./node_modules/typescript/lib",
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "stylelint.validate": ["css", "less", "postcss", "scss", "vue", "sass"]
+  "stylelint.validate": ["css", "less", "postcss", "scss", "vue", "sass"],
+  "scss.lint.unknownAtRules": "ignore",
+  "css.lint.unknownAtRules": "ignore"
 }
