--- a/vue-ts-default/package.json
+++ b/vue-ts-default/package.json
@@ -17,6 +17,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.16",
     "register-service-worker": "^1.7.2",
+    "vant": "^3.5.2",
     "vconsole": "^3.14.6",
     "vue": "^3.2.29",
     "vue-router": "^4.1.2"
