--- a/vue-ts-default/package.json
+++ b/vue-ts-default/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vue": "^9.2.0",
     "mockjs": "^1.1.0",
     "prettier": "^2.7.1",
+    "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.53.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
