--- a/vue-ts-default/package.json
+++ b/vue-ts-default/package.json
@@ -47,6 +47,7 @@
     "vite": "^2.9.9",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-progress": "0.0.3",
     "vite-plugin-vconsole": "^1.2.2",
     "vite-plugin-windicss": "^1.8.7",
     "vue-tsc": "^0.35.0",
