--- a/vue-ts-default/package.json
+++ b/vue-ts-default/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && cross-env VITE_NODE_ENV=production vite build",
+    "build:test": "vue-tsc --noEmit && cross-env VITE_NODE_ENV=test vite build",
     "preview": "vite preview",
     "deploy": "sh deploy.sh"
   },
@@ -30,6 +31,7 @@
     "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "cnjm-postcss-px-to-viewport": "^1.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.2.0",
