--- a/vue-ts-default/package.json
+++ b/vue-ts-default/package.json
@@ -7,7 +7,8 @@
     "build": "vue-tsc --noEmit && cross-env VITE_NODE_ENV=production vite build",
     "build:test": "vue-tsc --noEmit && cross-env VITE_NODE_ENV=test vite build",
     "preview": "vite preview",
-    "deploy": "sh deploy.sh"
+    "deploy": "sh deploy.sh",
+    "deploy:test": "sh deploy.sh test"
   },
   "dependencies": {
     "@eyunmy/bridge": "^1.1.12",
