--- a/vue-ts-default/.vscode/settings.json
+++ b/vue-ts-default/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "typescript.tsdk": "./node_modules/typescript/lib",
   "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "stylelint.validate": ["css", "less", "postcss", "scss", "vue", "sass"],
   "scss.lint.unknownAtRules": "ignore",
