--- a/vue-ts-default/.vscode/settings.json
+++ b/vue-ts-default/.vscode/settings.json
@@ -2,7 +2,8 @@
   "typescript.tsdk": "./node_modules/typescript/lib",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": true,
+    "source.fixAll.stylelint": true
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "stylelint.validate": ["css", "less", "postcss", "scss", "vue", "sass"],
