--- a/vue-ts-default/package.json
+++ b/vue-ts-default/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && cross-env VITE_NODE_ENV=production vite build",
-    "build:test": "vue-tsc --noEmit && cross-env VITE_NODE_ENV=test vite build",
+    "build": "vue-tsc --noEmit && cross-env VITE_NODE_ENV=test vite build",
+    "build:pro": "vue-tsc --noEmit && cross-env VITE_NODE_ENV=production vite build",
     "preview": "vite preview",
     "deploy": "sh deploy.sh",
-    "deploy:test": "sh deploy.sh test"
+    "deploy:pro": "sh deploy.sh pro"
   },
   "dependencies": {
     "@eyunmy/bridge": "^1.1.12",
@@ -16,7 +16,8 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "fastclick": "^1.0.6",
-    "nprogress": "^0.2.0",
+    "image-frame-player": "^1.0.2",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.16",
     "register-service-worker": "^1.7.2",
     "vant": "^3.5.2",
@@ -25,8 +26,8 @@
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.3",
-    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-legacy": "^1.8.2",
@@ -41,6 +42,7 @@
     "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.53.0",
     "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^3.21.0",
