--- a/vue-ts-default/.env
+++ b/vue-ts-default/.env
@@ -1,9 +1,9 @@
-VITE_APP_TITLE='vue-ts-template'
+VITE_APP_TITLE='中秋榜单'
 
 # 备份路径
 BACKUP_PATH='/home/admin/youcai_backup'
-DEPLOY_PATH='/home/admin/youcai_web/h5/loveshow/LoveshowTest/2022/vue-ts-template'
+DEPLOY_PATH='/home/admin/youcai_web/h5/loveshow/LoveshowTest/2022/midAutumn_rank'
 
 SERVER='admin@116.62.61.28'
  
-URL='http://nh5-ali.xiaoai.live/wx/loveshow/LoveshowTest/2022/vue-ts-template/'
+URL='http://nh5-ali.xiaoai.live/wx/loveshow/LoveshowTest/2022/midAutumn_rank/'
